[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "wasmtime-bin"
dynamic = ["version"]
description = "Wasmtime CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/bytecodealliance/wasmtime"
Repository = "https://github.com/cataggar/pypi-wasmtime"

[project.scripts]
wasmtime = "wasmtime_cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["python/wasmtime_cli"]
